<resources>
    <string name="app_name">车有度</string>

    <string name="sign_mobile">请输入手机号</string>
    <string name="sign_password">请输入登录密码</string>
    <string name="sign_slogan">二手车诚信信息公示系统</string>
    <string name="sign_org">中国汽车流通协会</string>
    <string name="sign_foot">北京车品证科技有限公司|中国汽车流通协会监制</string>
    <string name="sign_btn_sign">登录</string>
    <string name="home_title">麦当当二手车市场</string>

</resources>
